# emodule-productivity

./: .gitignore  AUTHORS  COPYING-PLAIN  Makefile.am  README  README.md  configure.ac  e-module-productivity.edc  e_modules-productivity.spec.in  module.desktop.in
data/: Makefile.am
po/: LINGUAS  POTFILES.in  ar.po  be.po  bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  lt.po  nb.po  nl.po  pl.po  productivity.pot  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
script/: Makefile.am  launcher.sh
src/: Makefile.am  e_mod_config.c  e_mod_config.h  e_mod_config_schedule.c  e_mod_config_windows.c  e_mod_config_worktools.c  e_mod_log.c  e_mod_main.c  e_mod_main.h
